Prevent overflow-y on sidebar when dropdown is active

--- a/app/styles/components/td-game.scss
+++ b/app/styles/components/td-game.scss
@@ -36,7 +36,6 @@ $td-game__item__margin-bottom: 20px;
   flex-direction: column;
   font-family: $font-family--standard;
   min-width: 300px;
-  overflow-y: auto;
   padding: 20px 30px 0px;
 }
 
